[package]
name = "primes"
version = "0.2.4"
authors = ["Caio O Campos <caio.campos1204@gmail.com.br>"]
edition = "2018"

[dependencies]
wasm-bindgen = "~0.2.80"
rand = "~0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/mod.rs"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]