[package]
name = "primes"
version = "0.2.6"
authors = ["Caio O Campos <caio.campos1204@gmail.com.br>"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
rand = "0.9.0"
getrandom = { version = "0.3.0", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/mod.rs"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]